--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,15 @@ jobs:
         with:
           node-version: "12"
       - run: npm i -g pnpm@5
+      - uses: actions/cache@v2
+        with:
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-
       # Install and build projects
       - run: pnpm install
       # Check code formatting
       - run: pnpx prettier --check .
+      # Remove unreferenced packages from the store before caching to prevent the cache from growing.
+      - run: pnpm store prune
