Let Prettier ignore sample files

--- a/.prettierignore
+++ b/.prettierignore
@@ -2,5 +2,6 @@ pnpm-*.yaml
 node_modules/
 lib/
 .tmp/
-examples/demo/lib/
-examples/demo/public/js/
+examples/*/lib/
+examples/*/public/
+examples/*/workspace/
