Use semver range for devDependencies as well

--- a/renovate.json5
+++ b/renovate.json5
@@ -10,4 +10,6 @@
     // Demos
     "examples/",
   ],
+  // Override to use semver range for devDependencies as well.
+  rangeStrategy: "replace",
 }
