Support in browser Language Server (Web Worker)

--- a/packages/tsconfig-esm.json
+++ b/packages/tsconfig-esm.json
@@ -2,6 +2,7 @@
   "files": [],
   "references": [
     { "path": "./vscode-jsonrpc-ws/tsconfig-esm.json" },
+    { "path": "./vscode-jsonrpc-ww/tsconfig-esm.json" },
     { "path": "./lsp-connection/tsconfig-esm.json" },
     { "path": "./codemirror-workspace/tsconfig-esm.json" }
   ]
