--- a/packages/codemirror-workspace/package.json
+++ b/packages/codemirror-workspace/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@qualified/lsp-connection": "^0.1.0",
     "@qualified/vscode-jsonrpc-ws": "^0.1.0",
+    "@qualified/vscode-jsonrpc-ww": "^0.1.0",
     "vscode-languageserver-protocol": "^3.16.0-next.6"
   },
   "devDependencies": {
