--- a/examples/demo-worker/package.json
+++ b/examples/demo-worker/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "rimraf public/js && webpack",
+    "build": "rimraf public/js && webpack --mode=development",
+    "build:production": "rimraf public/js && webpack --mode=production",
     "start": "pnpm build && serve -l 4000 public"
   },
   "dependencies": {
@@ -26,6 +27,7 @@
     "ts-loader": "^8.0.2",
     "typescript": "^4.0.2",
     "webpack": "^4.44.1",
+    "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.12"
   }
 }
