--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "repository": "https://github.com/qualified/lsps",
   "bugs": "https://github.com/qualified/lsps/issues",
   "scripts": {
+    "test": "pnpm multi test",
     "prepare": "pnpm build && pnpm build:esm",
     "build": "tsc --build packages",
     "clean": "tsc --build --clean packages",
