--- a/packages/codemirror-workspace/package.json
+++ b/packages/codemirror-workspace/package.json
@@ -21,6 +21,9 @@
     "lib/**/*.d.ts",
     "css/*.css"
   ],
+  "scripts": {
+    "test": "jest"
+  },
   "peerDependencies": {
     "codemirror": "^5.x"
   },
@@ -28,11 +31,17 @@
     "@qualified/lsp-connection": "^0.1.0",
     "@qualified/vscode-jsonrpc-ws": "^0.1.0",
     "@qualified/vscode-jsonrpc-ww": "^0.1.0",
+    "@qualified/vscode-snippet-parser": "^0.1.0",
     "vscode-languageserver-protocol": "^3.16.0-next.6"
   },
   "devDependencies": {
+    "@jest/types": "^26.3.0",
     "@types/codemirror": "^0.0.97",
+    "@types/jest": "^26.0.12",
     "codemirror": "^5.56.0",
+    "fast-check": "^2.2.1",
+    "jest": "^26.4.2",
+    "ts-jest": "^26.3.0",
     "typescript": "^4.0.2"
   }
 }
