Add more tests for snippet completion

--- a/packages/codemirror-workspace/package.json
+++ b/packages/codemirror-workspace/package.json
@@ -22,7 +22,8 @@
     "css/*.css"
   ],
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "peerDependencies": {
     "codemirror": "^5.x"
