--- a/packages/vscode-jsonrpc-ws/package.json
+++ b/packages/vscode-jsonrpc-ws/package.json
@@ -18,7 +18,7 @@
     "lib/**/*.d.ts"
   ],
   "dependencies": {
-    "vscode-jsonrpc": "^6.0.0-next.4"
+    "vscode-jsonrpc": "next"
   },
   "devDependencies": {
     "typescript": "^4.0.2"
