--- a/packages/vscode-jsonrpc-ww/package.json
+++ b/packages/vscode-jsonrpc-ww/package.json
@@ -5,7 +5,7 @@
     "vscode-jsonrpc",
     "webworker"
   ],
-  "version": "0.1.0",
+  "version": "0.2.0",
   "license": "MIT",
   "homepage": "https://github.com/qualified/lsps#readme",
   "repository": "https://github.com/qualified/lsps",
@@ -18,7 +18,7 @@
     "lib/**/*.d.ts"
   ],
   "dependencies": {
-    "vscode-jsonrpc": "next"
+    "vscode-jsonrpc": "^6.0.0"
   },
   "devDependencies": {
     "typescript": "^4.0.2"
