--- a/examples/demo-worker/package.json
+++ b/examples/demo-worker/package.json
@@ -15,7 +15,7 @@
     "vscode-languageserver-protocol": "^3.16.0"
   },
   "devDependencies": {
-    "@types/codemirror": "0.0.98",
+    "@types/codemirror": "^5.0.0",
     "@types/marked": "^1.1.0",
     "concurrently": "^5.3.0",
     "css-loader": "^4.3.0",
