--- a/examples/demo/package.json
+++ b/examples/demo/package.json
@@ -18,7 +18,7 @@
     "vscode-html-languageserver-bin": "^1.4.0"
   },
   "devDependencies": {
-    "@types/codemirror": "0.0.98",
+    "@types/codemirror": "^5.0.0",
     "@types/marked": "^1.1.0",
     "@types/webpack": "^4.41.22",
     "concurrently": "^5.3.0",
