--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "watch:esm": "tsc --build --watch packages/tsconfig-esm.json"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.16.0",
     "husky": "^6.0.0",
     "prettier": "^2.1.1",
     "pretty-quick": "^3.0.2",
