--- a/.github/workflows/changesets.yml
+++ b/.github/workflows/changesets.yml
@@ -27,7 +27,7 @@ jobs:
       - name: create versions
         uses: changesets/action@master
         with:
-          version: pnpx changeset version && pnpm install
+          version: "pnpm run changeset-version"
           commit: "chore: update versions"
           title: "chore: update versions"
         env:
