--- a/examples/demo-save/package.json
+++ b/examples/demo-save/package.json
@@ -8,7 +8,7 @@
     "start": "pnpm build && concurrently \"pnpm start-ls-rust\" \"serve -l 4000 public\""
   },
   "dependencies": {
-    "@qualified/codemirror-workspace": "^0.2.0",
+    "@qualified/codemirror-workspace": "workspace:0.2.1",
     "codemirror": "^5.56.0",
     "marked": "^2.0.7"
   },
