--- a/examples/demo-worker/package.json
+++ b/examples/demo-worker/package.json
@@ -8,7 +8,7 @@
     "start": "pnpm build && serve -l 4000 public"
   },
   "dependencies": {
-    "@qualified/codemirror-workspace": "^0.2.0",
+    "@qualified/codemirror-workspace": "workspace:0.2.1",
     "codemirror": "^5.56.0",
     "marked": "^2.0.7",
     "vscode-json-languageservice": "^3.8.3",
