Update `merged-pr` script

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/github-script@v5
         with:
           script: |
-            const res = await github.pulls.list({
+            const res = await github.rest.pulls.list({
               owner: context.repo.owner,
               repo: context.repo.repo,
               sort: 'updated',
