--- a/examples/demo/package.json
+++ b/examples/demo/package.json
@@ -3,9 +3,10 @@
   "version": "0.2.2",
   "private": true,
   "scripts": {
-    "build": "rimraf public/js && webpack",
-    "start-proxy": "PATH=$(pwd)/bin:$PATH lsp-ws-proxy -l 9990 -- typescript-language-server --stdio -- css-languageserver --stdio -- html-languageserver --stdio",
-    "start": "pnpm build && concurrently \"pnpm start-proxy\" \"serve -l 4000 public\""
+    "dev": "concurrently \"vite\" \"pnpm start-proxy\"",
+    "build": "tsc && vite build",
+    "preview": "concurrently \"vite preview\" \"pnpm start-proxy\"",
+    "start-proxy": "cd workspace && PATH=$(pwd)/../bin:$PATH RUST_LOG=info,lsp_ws_proxy=debug lsp-ws-proxy --remap -l 9990 -- typescript-language-server --stdio -- css-languageserver --stdio -- html-languageserver --stdio"
   },
   "dependencies": {
     "@qualified/codemirror-workspace": "workspace:0.4.1",
@@ -18,17 +19,8 @@
   "devDependencies": {
     "@types/codemirror": "^5.0.0",
     "@types/marked": "^2.0.3",
-    "@types/webpack": "^4.41.22",
     "concurrently": "^5.3.0",
-    "css-loader": "^4.3.0",
-    "raw-loader": "^4.0.1",
-    "rimraf": "^3.0.2",
-    "serve": "^11.3.2",
-    "style-loader": "^1.2.1",
-    "ts-loader": "^8.0.3",
     "typescript": "^4.0.2",
-    "webpack": "^4.44.1",
-    "webpack-bundle-analyzer": "^3.8.0",
-    "webpack-cli": "^3.3.12"
+    "vite": "^2.9.9"
   }
 }
