Use Vite for demo-worker

--- a/.github/workflows/deploy_demo.yml
+++ b/.github/workflows/deploy_demo.yml
@@ -20,10 +20,10 @@ jobs:
             ${{ runner.os }}-pnpm-
       - run: pnpm install
       - run: |
-          cd examples/demo-worker && pnpm build:production
+          cd examples/demo-worker && pnpm build
       - uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./examples/demo-worker/public
+          publish_dir: ./examples/demo-worker/dist
       # Remove unreferenced packages from the store before caching to prevent the cache from growing.
       - run: pnpm store prune
