--- a/examples/demo-worker/package.json
+++ b/examples/demo-worker/package.json
@@ -3,29 +3,26 @@
   "version": "0.1.12",
   "private": true,
   "scripts": {
-    "build": "rimraf public/js && webpack --mode=development",
-    "build:production": "rimraf public/js && webpack --mode=production",
-    "start": "pnpm build && serve -l 4000 public"
+    "dev": "pnpm build-worker && vite",
+    "build-worker": "rollup -f es -i src/worker.ts -p typescript -p 'node-resolve={browser: true}' -p commonjs -o public/worker.js",
+    "build": "tsc && pnpm build-worker && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@qualified/codemirror-workspace": "workspace:0.4.1",
     "codemirror": "^5.59.2",
     "marked": "^2.0.7",
-    "vscode-json-languageservice": "^3.8.3",
+    "vscode-json-languageservice": "^5.0.0",
     "vscode-languageserver-protocol": "^3.16.0"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-typescript": "^8.3.3",
     "@types/codemirror": "^5.0.0",
     "@types/marked": "^2.0.3",
-    "concurrently": "^5.3.0",
-    "css-loader": "^4.3.0",
-    "rimraf": "^3.0.2",
-    "serve": "^11.3.2",
-    "style-loader": "^1.2.1",
-    "ts-loader": "^8.0.3",
+    "rollup": "^2.75.7",
     "typescript": "^4.0.2",
-    "webpack": "^4.44.1",
-    "webpack-bundle-analyzer": "^3.8.0",
-    "webpack-cli": "^3.3.12"
+    "vite": "^2.9.9"
   }
 }
