--- a/examples/demo-save/.gitignore
+++ b/examples/demo-save/.gitignore
@@ -1,6 +1,29 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
 bin/
-lib/
-public/js/
 workspace/target/
 workspace/Cargo.lock
 workspace/src/adder.rs
