--- a/.github/workflows/changesets.yml
+++ b/.github/workflows/changesets.yml
@@ -13,17 +13,14 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: actions/setup-node@v2
+      - uses: pnpm/action-setup@v2
         with:
-          node-version: 12.x
-      - run: npm i -g pnpm@6
-      - uses: actions/cache@v3
+          version: '^6.10.0'
+      - uses: actions/setup-node@v3
         with:
-          path: ~/.pnpm-store
-          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-
-      - run: pnpm install
+          node-version-file: .nvmrc
+          cache: pnpm
+      - run: pnpm install --frozen-lockfile
       - name: create versions
         uses: changesets/action@master
         with:
