--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,21 +11,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v2
+      - uses: pnpm/action-setup@v2
         with:
-          node-version: "12"
-      - run: npm i -g pnpm@6
-      - uses: actions/cache@v3
+          version: '^6.10.0'
+      - uses: actions/setup-node@v3
         with:
-          path: ~/.pnpm-store
-          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-
+          node-version-file: .nvmrc
+          cache: pnpm
       # Install and build projects
-      - run: pnpm install
+      - run: pnpm install --frozen-lockfile
       # Run tests for all projects
       - run: pnpm test
       # Check code formatting
       - run: pnpx prettier --check .
-      # Remove unreferenced packages from the store before caching to prevent the cache from growing.
-      - run: pnpm store prune
