--- a/packages/codemirror-workspace/package.json
+++ b/packages/codemirror-workspace/package.json
@@ -36,13 +36,14 @@
     "vscode-languageserver-protocol": "^3.16.0"
   },
   "devDependencies": {
-    "@jest/types": "^27.0.0",
+    "@jest/types": "^28.1.1",
     "@types/codemirror": "^5.0.0",
-    "@types/jest": "^27.0.0",
+    "@types/jest": "^28.1.3",
     "codemirror": "^5.59.2",
     "fast-check": "^2.3.0",
-    "jest": "^27.0.0",
-    "ts-jest": "^27.0.0",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
+    "ts-jest": "^28.0.5",
     "typescript": "^4.7.4"
   }
 }
