--- a/examples/rust-analyzer-sync/package.json
+++ b/examples/rust-analyzer-sync/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.14",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"pnpm start-ls-rust\" \"vite\"",
+    "dev": "concurrently 'vite' 'pnpm start-proxy'",
     "build": "tsc && vite build",
-    "preview": "concurrently \"pnpm start-ls-rust\" \"vite preview\"",
-    "start-ls-rust": "cd ./workspace && PATH=$(pwd)/../bin:$PATH lsp-ws-proxy -l 9999 --remap --sync -- rust-analyzer"
+    "preview": "concurrently 'vite preview' 'pnpm start-proxy'",
+    "start-proxy": "cd ./workspace && PATH=$(pwd)/../bin:$PATH lsp-ws-proxy -l 9999 --remap --sync -- rust-analyzer"
   },
   "dependencies": {
     "@qualified/codemirror-workspace": "workspace:0.5.0",
