--- a/examples/vue-volar/package.json
+++ b/examples/vue-volar/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.3",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"vite\" \"pnpm start-proxy\"",
+    "dev": "concurrently 'vite' 'pnpm start-proxy'",
     "build": "tsc && vite build",
-    "preview": "concurrently \"vite preview\" \"pnpm start-proxy\"",
+    "preview": "concurrently 'vite preview' 'pnpm start-proxy'",
     "start-proxy": "cd workspace && PATH=$(pwd)/../bin:$PATH RUST_LOG=info,lsp_ws_proxy=debug lsp-ws-proxy --remap -l 9990 -- vue-language-server --stdio"
   },
   "dependencies": {
