--- a/examples/html-css-ts/package.json
+++ b/examples/html-css-ts/package.json
@@ -11,16 +11,16 @@
   "dependencies": {
     "@qualified/codemirror-workspace": "workspace:0.5.0",
     "codemirror": "^5.59.2",
-    "marked": "^4.0.17",
-    "typescript-language-server": "^0.6.2",
-    "vscode-css-languageserver-bin": "^1.4.0",
-    "vscode-html-languageserver-bin": "^1.4.0"
+    "marked": "^4.0.17"
   },
   "devDependencies": {
     "@types/codemirror": "^5.0.0",
     "@types/marked": "^4.0.3",
     "concurrently": "^7.2.2",
     "typescript": "^4.7.4",
-    "vite": "^2.9.9"
+    "typescript-language-server": "^0.6.2",
+    "vite": "^2.9.9",
+    "vscode-css-languageserver-bin": "^1.4.0",
+    "vscode-html-languageserver-bin": "^1.4.0"
   }
 }
