--- a/examples/vue-volar/package.json
+++ b/examples/vue-volar/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "@qualified/codemirror-workspace": "workspace:0.5.0",
     "codemirror": "^5.59.2",
-    "marked": "^4.0.17",
-    "vue": "^3.2.37"
+    "marked": "^4.0.17"
   },
   "devDependencies": {
     "@types/codemirror": "^5.0.0",
@@ -20,6 +19,7 @@
     "@volar/vue-language-server": "^0.38.1",
     "concurrently": "^7.2.2",
     "typescript": "^4.7.4",
-    "vite": "^2.9.9"
+    "vite": "^2.9.9",
+    "vue": "^3.2.37"
   }
 }
